--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ install:
 - go get github.com/onsi/ginkgo
 - go get github.com/onsi/gomega
 script:
-- ls ${GOPATH}/bin
+- find ~/ -name "ginkgo"
 - ${GOPATH}/bin/ginkgo -v
