--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: go
 go: 1.7
 install:
-- go get github.com/onsi/ginkgo
+- go get github.com/onsi/ginkgo/ginkgo
 - go get github.com/onsi/gomega
-script:
-- find ~/ -name "ginkgo"
-- ${GOPATH}/bin/ginkgo -v
+script: "${GOPATH}/bin/ginkgo -v"
