--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ os:
 install:
 - go get github.com/onsi/ginkgo/ginkgo
 - go get github.com/onsi/gomega
-script: "${GOPATH}/bin/ginkgo -v"
+script: "${GOPATH}/bin/ginkgo -v -race"
